mintupdate (4.0.9) debian; urgency=low

  * Added Indian and Brazilian repositories
  * Added total download size and number of selected updates

 -- Clement Lefebvre <root@linuxmint.com>  Thu,  16 Sep 2010 10:28:00 +0000

mintupdate (4.0.8) debian; urgency=low

  * Added Debian suite to python-apt info files

 -- Clement Lefebvre <root@linuxmint.com>  Sat,  28 Aug 2010 18:00:00 +0000

mintupdate (4.0.7) isadora; urgency=low

  * Added German and Latvian repositories

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  03 Aug 2010 11:34:00 +0000

mintupdate (4.0.6) isadora; urgency=low

  * Added American repository

 -- Clement Lefebvre <root@linuxmint.com>  Sat,  24 Jul 2010 12:54:00 +0000

mintupdate (4.0.5) isadora; urgency=low

  * Added indonesian repository

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  29 Jun 2010 10:25:00 +0000

mintupdate (4.0.4) isadora; urgency=low

  * Updated desktop file

 -- Clement Lefebvre <root@linuxmint.com>  Fri,  14 May 2010 10:51:00 +0000

mintupdate (4.0.3) isadora; urgency=low

  * Updated template file

 -- Clement Lefebvre <root@linuxmint.com>  Fri,  9 Apr 2010 13:53:00 +0000

mintupdate (4.0.2) isadora; urgency=low

  * Improved icon visibility (for light themes)

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  23 Mar 2010 13:46:00 +0000

mintupdate (4.0.1) isadora; urgency=low

  * Fixed bug in changelog retrieval

 -- Clement Lefebvre <root@linuxmint.com>  Tue,  23 Mar 2010 12:52:00 +0000

mintupdate (4.0.0) isadora; urgency=low

  * Changed default icons
  * Introduced two new status: unknown (when it's not possible to determine whether there are updates but the cause doesn't require action from the user, typical case: no Internet connection), and apply (when installing updates)
  * Less intrusive: by default, the icon looks different only when the system is up to date, when there are updates to apply, or when there is an error.

 -- Clement Lefebvre <root@linuxmint.com>  Wed,  24 Feb 2010 13:41:00 +0000
