@@ -2,6 +2,7 @@ mintupdate (4.0.9) debian; urgency=low
 
   * Added Indian and Brazilian repositories
   * Added total download size and number of selected updates
+  * Added "ignore updates for this package" menu item in treeview
 
  -- Clement Lefebvre <root@linuxmint.com>  Thu,  16 Sep 2010 10:28:00 +0000
 
